--- a/indecision/src/index.css
+++ b/indecision/src/index.css
@@ -16,3 +16,12 @@ code {
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* @layer base {
+  h1 {
+    @apply text-7xl;
+  }
+  h2 {
+    @apply text-4xl;
+  }
+} */
